-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.1.0 Beta 1
-
None
-
Ubuntu 13.04
Compiled Qt 5.1 beta and Qt Creator 2.7.0; remapping " and @ using xmodmap works fine in all other X11 applications, but not those using Qt 5.
- relates to
-
QTCREATORBUG-10378 Ctrl+Shift+U does not find all usages since f7c68f6baf104729e8d2fb3a0693b3c59928f8d3
-
- Closed
-
-
QTBUG-32322 Qt 5.1 on Linux/X11 ignores xkb keyboard layout
-
- Closed
-
-
QTBUG-32760 Failed to compile a keymap
-
- Closed
-
- replaces
-
QTCREATORBUG-11214 Remapped escape key is not honored
-
- Closed
-
-
QTCREATORBUG-12111 Keyboard handling is broken with .Xmodmap config
-
- Closed
-
For Gerrit Dashboard: QTBUG-31527 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
77264,3 | WIP: Add better support for keymap update handling | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
79459,4 | Add better support for keymap update handling | stable | qt/qtbase | Status: MERGED | +2 | 0 |